--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "1888233379:AAHRl5ot9dtDqTWWmMvlOwraTTTgkdzCIb4"
+BOT_TOKEN = "5185436157:AAENp9qrdVNYfRXxptqLNSFaBnFN1QEc4Ig"
 GDRIVE_FOLDER_ID = "1zpphE-h2OQUqz3xtL9b_iec9w97Fhqpy"
 OWNER_ID =1786023085
 DOWNLOAD_DIR = "/usr/src/app/downloads"
@@ -9,7 +9,7 @@ TELEGRAM_API =16633242
 TELEGRAM_HASH = "78aec00b2bbff365f7541c5bf4ce26b4"
 # OPTIONAL CONFIG
 IS_TEAM_DRIVE = "True"
-DATABASE_URL = "postgresql://postgres:oTuC7R6AZsOrWBFhiUEF@containers-us-west-52.railway.app:7675/railway"
+DATABASE_URL = "postgresql://postgres:QG6zpJ1KNQ1ITbhQj8h3@containers-us-west-40.railway.app:7915/railway"
 AUTHORIZED_CHATS = "1786023085"
 SUDO_USERS = "1786023085"
 IGNORE_PENDING_REQUESTS = "True"
@@ -33,7 +33,7 @@ EQUAL_SPLITS = "True"
 CUSTOM_FILENAME = "@azrilaiman3"
 DUMP_CHAT = "-1001613499555"
 # qBittorrent/Aria2c
-BASE_URL_OF_BOT = "https://multipurpo.herokuapp.com"
+BASE_URL_OF_BOT = "https://sayaaiman.herokuapp.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 # RSS
